--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,7 @@
     <string name="previous">Previous</string>
 
     <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>>
+    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
+    <string name="insruction_heading">Instruction</string>
+    <string name="instruction_description">Use create task button (+) in bottom menu</string>>
 </resources>
