Delete dialog message realization Add dialog confirm, cancel and dismiss listeners

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
+<?xml version="1.0" encoding="utf-8"?>
+
 <resources>
     <string name="app_name">Task Timer</string>
     <!-- Some name -->
@@ -19,13 +21,11 @@
     <string name="btn_addtask_save">Save</string>
     <string name="title_activity_add_edit">Edit</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
-    <string name="next">Next</string>
-    <string name="previous">Previous</string>
-
-    <string name="hello_first_fragment">Hello first fragment</string>
-    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
-    <string name="insruction_heading">Instruction</string>
-    <string name="instruction_description">Use create task button (+) in bottom menu</string>>
+    <string name="instruction_heading">Instruction</string>
+    <string name="instruction_description">Use create task button (+) in bottom menu</string>
+    <string name="back_button">Back</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="deldiag_positive_caption">Delete</string>
+    <string name="deldiag_message">Confirm task deletion and timing related to it with:\nID: %1$d\nName: %2$s</string>>
 </resources>
